<resources>
    <string name="app_name">LayoutGjob</string>
    <string name="questionario">Questionário</string>
    <string name="outros">Outros</string>
    <string name="sobre">Sobre</string>
    <string name="configuracoes">configuracoes</string>
    <string name="usuario">Usuário</string>
    <string name="verificado">Verificado</string>
    <string name="perfil">Perfil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splashlogo">splashlogo</string>
</resources>